--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@azure/cosmos": "^4.0.0",
     "@nestjs/azure-database": "^3.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
